--- a/_includes/video.html
+++ b/_includes/video.html
@@ -2,7 +2,7 @@
 <iframe width="560"
         height="315" 
         src="https://www.youtube.com/embed/{{ include.id }}"
-        title="YouTube video player"
+        title="{{ include.title }}"
         class="youtube"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
