reduce margins for nested lists

--- a/_sass/components/book.scss
+++ b/_sass/components/book.scss
@@ -79,6 +79,12 @@
 		margin-bottom: 2em;
 	}
 
+	ol ul,
+	ul ul {
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+
 	li {
 		line-height: 1.8em;
 	}
