Declare and increase heading font sizes

--- a/_sass/components/book.scss
+++ b/_sass/components/book.scss
@@ -62,8 +62,28 @@
 	h1 {
 		margin-top: 0;
 		margin-bottom: 1.5rem;
-		font-size: 2.2rem;
+		font-size: 2.25rem;
 		line-height: 1.2em;
+	}
+
+	h2 {
+		font-size: 2rem;
+	}
+
+	h3 {
+		font-size: 1.75rem;
+	}
+
+	h4 {
+		font-size: 1.5rem;
+	}
+
+	h5 {
+		font-size: 1.25rem;
+	}
+
+	h6 {
+		font-size: 1rem;
 	}
 
 	p {
