contrast for code and callout

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@ $text-on-dark: #fff;
 $link: #0073A8;
 $link-hover: lighten($link, 10%);
 
-$help: #00b28d;
+$help: #1CA683;
 $tech: #e08914;
 $warning: #e0143f;
 
