--- a/_sass/components/highlight.scss
+++ b/_sass/components/highlight.scss
@@ -17,7 +17,7 @@ code {
 	font-family: 'Roboto Mono', monospace;
 	font-size: 14px;
 	font-weight: 700;
-	color: #00b28d;
+	color: #01866a;
 }
 
 .highlight code {
